# termsheet-extraction-eval

./: .gitignore  CLAUDE.md  LICENSE  PUSH_TO_GITHUB.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/results/: v1.json  v2.json  v3.json
data/synthetic/: README.md  ground_truth.json  raw_extractions.json
docs/: ARCHITECTURE.md  PROMPT_ENGINEERING.md
prompts/: schema.json  system_prompt_v1.txt  system_prompt_v2.txt  system_prompt_v3.txt
src/termsheet_eval/: __init__.py  cli.py  pipeline.py
src/termsheet_eval/compare/: __init__.py  comparators.py  normalizer.py  result.py
src/termsheet_eval/constraints/: __init__.py  engine.py
src/termsheet_eval/extract/: __init__.py  base.py  mock_client.py
src/termsheet_eval/inference/: __init__.py  null_inference.py
src/termsheet_eval/metrics/: __init__.py  core.py  scoring.py
tests/: test_comparators.py
